--- a/SliderValuesTutorial Lambda/Builds/MacOSX/Info-App.plist
+++ b/SliderValuesTutorial Lambda/Builds/MacOSX/Info-App.plist
@@ -8,11 +8,11 @@
     <key>CFBundleIconFile</key>
     <string></string>
     <key>CFBundleIdentifier</key>
-    <string>com.yourcompany.NewProject</string>
+    <string>com.yourcompany.SliderValuesTutorial</string>
     <key>CFBundleName</key>
-    <string>NewProject</string>
+    <string>SliderValuesTutorial</string>
     <key>CFBundleDisplayName</key>
-    <string>NewProject</string>
+    <string>SliderValuesTutorial</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleSignature</key>
