--- a/MultiOutSynthTutorial/Builds/MacOSX/Info-AU.plist
+++ b/MultiOutSynthTutorial/Builds/MacOSX/Info-AU.plist
@@ -8,7 +8,7 @@
     <key>CFBundleIconFile</key>
     <string></string>
     <key>CFBundleIdentifier</key>
-    <string>com.SignalcomposeInc_.MultiOutSynthTutorial</string>
+    <string>com.Signalcompose.MultiOutSynthTutorial</string>
     <key>CFBundleName</key>
     <string>MultiOutSynthTutorial</string>
     <key>CFBundleDisplayName</key>
@@ -18,11 +18,11 @@
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleShortVersionString</key>
-    <string>1.0.0</string>
+    <string>1.0.1</string>
     <key>CFBundleVersion</key>
-    <string>1.0.0</string>
+    <string>1.0.1</string>
     <key>NSHumanReadableCopyright</key>
-    <string>Signal compose Inc.</string>
+    <string>Signal compose</string>
     <key>NSHighResolutionCapable</key>
     <true/>
     <key>AudioComponents</key>
@@ -41,7 +41,7 @@
         <key>subtype</key>
         <string>Xl3o</string>
         <key>version</key>
-        <integer>65536</integer>
+        <integer>65537</integer>
         <key>resourceUsage</key>
         <dict>
           <key>network.client</key>
