--- a/MultiOutSynthTutorial/Builds/MacOSX/Info-VST3.plist
+++ b/MultiOutSynthTutorial/Builds/MacOSX/Info-VST3.plist
@@ -8,7 +8,7 @@
     <key>CFBundleIconFile</key>
     <string></string>
     <key>CFBundleIdentifier</key>
-    <string>com.SignalcomposeInc_.MultiOutSynthTutorial</string>
+    <string>com.Signalcompose.MultiOutSynthTutorial</string>
     <key>CFBundleName</key>
     <string>MultiOutSynthTutorial</string>
     <key>CFBundleDisplayName</key>
@@ -18,11 +18,11 @@
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleShortVersionString</key>
-    <string>1.0.0</string>
+    <string>1.0.1</string>
     <key>CFBundleVersion</key>
-    <string>1.0.0</string>
+    <string>1.0.1</string>
     <key>NSHumanReadableCopyright</key>
-    <string>Signal compose Inc.</string>
+    <string>Signal compose</string>
     <key>NSHighResolutionCapable</key>
     <true/>
   </dict>
